Fixed issue with overlapped layers

--- a/public/styles/story.less
+++ b/public/styles/story.less
@@ -1,4 +1,5 @@
 .project-story {
+	z-index: 10;
 	.breadcrumb-container {
 		width: 100%;
 		border-bottom: 1px solid @separator-color;
